    so that corresponding dimensions are read/written to their defined length.
  * Fix support for OPeNDAP (if enabled by the netcdf library)
  * Build Windows packages with netcdf4 library
    - Enable OPeNDAP in Win64
    - Disable OPeNDAP in Win32, because it causes RNetCDF to crash
    - Thanks to Jeroen Ooms for giving us https://github.com/rwinlib/netcdf!

Version 1.8-2, 2016-02-21
  * Add support for POSIXct timestamps to utcal.nc and utinvcal.nc.
  * Use nc-config by default in configure to find netcdf build settings.
  * Allow customisation of configure by variables CPPFLAGS, LDFLAGS and LIBS,
    and remove the following options: --with-netcdf-include, --with-netcdf-lib,
     --with-hdf5-lib, --with-udunits-include, --with-udunits-lib.

Version 1.7-3, 2015-05-09
  * Support reading/writing NC_CHAR as vectors of raw bytes
  * Avoid intermediate copies of array data when possible
  * Fix memory errors reported by valgrind for udunits2 calendar functions.
  * Support compilation with udunits.h inside a udunits2 sub-directory.
  * Add udunits data files to source package to ensure they can be found
    when building binary packages for Windows and Mac.

Version 1.6.3-1, 2014-09-01
  * Allow reading of character vector or scalar

Version 1.6.2-3, 2014-06-16
  * Added HDF5 licence file for distribution

Version 1.6.2-2, 2014-05-27
  * Corrected potential memory leak in read/write of character arrays

Version 1.6.1-2, 2012-07-20
  * Added function read.nc
  * Added packing/unpacking of data

Version 1.5.3-1, 2012-02-15
  * Optionally copy udunits data files during installation of RNetCDF.
  * When loading RNetCDF in R, initialise udunits with copied data files.

Version 1.5.2-2, 2011-01-06
  * configure adds tests for extra libraries used by netcdf4 on some systems.
  * Avoid repeated zeroing of character arrays in C interface.

Version 1.5.0-1, 2010-12-30
  * Add new modes (large, prefill, share) to nc_open and nc_create.