@@ -1,2 +1,2 @@
-useDynLib(RNetCDF)
+useDynLib(RNetCDF, .registration = TRUE)
 exportPattern("^[^\\.].*\\.nc$")
