@@ -59,6 +59,7 @@
  *                      Allow udunits2 headers to be in udunits2 directory.    *
  *  mw       26/01/16   Fix memory leak from abnormal exit of calendar funcs.  *
  *  mw       16/07/17   Minimise use of nc_enddef to read data from opendap.   *
+ *  mw       01/10/17   Register native routines for invocation by R           *
  *									       *
 \*=============================================================================*/
 
@@ -80,6 +81,7 @@
 
 #include <R.h>
 #include <Rinternals.h>
+#include <R_ext/Rdynload.h>
 
 
 /*=============================================================================*\
@@ -1909,8 +1911,48 @@ cleanup:
     return(retlist);
 }
 
-/*=============================================================================*/
- 
+
+/*=============================================================================*\
+ *  Register native routines						       *
+\*=============================================================================*/
+
+static const R_CallMethodDef callMethods[]  = {
+  {"R_nc_copy_att", (DL_FUNC) &R_nc_copy_att, 7},
+  {"R_nc_delete_att", (DL_FUNC) &R_nc_delete_att, 4},
+  {"R_nc_get_att", (DL_FUNC) &R_nc_get_att, 5},
+  {"R_nc_inq_att", (DL_FUNC) &R_nc_inq_att, 6},
+  {"R_nc_put_att", (DL_FUNC) &R_nc_put_att, 8},
+  {"R_nc_rename_att", (DL_FUNC) &R_nc_rename_att, 5},
+  {"R_nc_close", (DL_FUNC) &R_nc_close, 1},
+  {"R_nc_create", (DL_FUNC) &R_nc_create, 5},
+  {"R_nc_def_dim", (DL_FUNC) &R_nc_def_dim, 4},
+  {"R_nc_inq_dim", (DL_FUNC) &R_nc_inq_dim, 4},
+  {"R_nc_rename_dim", (DL_FUNC) &R_nc_rename_dim, 5},
+  {"R_nc_inq_file", (DL_FUNC) &R_nc_inq_file, 1},
+  {"R_nc_open", (DL_FUNC) &R_nc_open, 4},
+  {"R_nc_sync", (DL_FUNC) &R_nc_sync, 1},
+  {"R_nc_def_var", (DL_FUNC) &R_nc_def_var, 5},
+  {"R_nc_get_vara_double", (DL_FUNC) &R_nc_get_vara_double, 5},
+  {"R_nc_get_vara_text", (DL_FUNC) &R_nc_get_vara_text, 6},
+  {"R_nc_inq_var", (DL_FUNC) &R_nc_inq_var, 4},
+  {"R_nc_put_vara_double", (DL_FUNC) &R_nc_put_vara_double, 6},
+  {"R_nc_put_vara_text", (DL_FUNC) &R_nc_put_vara_text, 7},
+  {"R_nc_rename_var", (DL_FUNC) &R_nc_rename_var, 5},
+  {"R_ut_calendar", (DL_FUNC) &R_ut_calendar, 3},
+  {"R_ut_init", (DL_FUNC) &R_ut_init, 1},
+  {"R_ut_inv_calendar", (DL_FUNC) &R_ut_inv_calendar, 3},
+  {NULL, NULL, 0}
+};
+
+void R_init_RNetCDF(DllInfo *info)
+{
+   R_registerRoutines(info, NULL, callMethods, NULL, NULL);
+   R_useDynamicSymbols(info, FALSE);
+   /* Omit R_forceSymbols for compatibility with R<3.0.0, and because
+      some users have reported that they call the C interface directly. */
+}
+
+
 /*=============================================================================*\
  *  SCRATCH                                                                    *
 \*=============================================================================*/
